--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1124,7 +1124,7 @@ ul#nav li.current a {
 #guides .contact-details {
   width: 41.66667%;
 }
-#about .download {
+#guides .download {
   width: 58.33333%;
   padding-top: 6px;
 }
@@ -1807,153 +1807,47 @@ call-to-action .button {
 /* ------------------------------------------------------------------ */
 
 #contact {
-  background: #191919;
-  padding-top: 96px;
-  padding-bottom: 102px;
-  color: #636363;
-}
-#contact .section-head {
-  margin-bottom: 42px;
+  background: #126AFB;
+  padding-top: 144px;
+  padding-bottom: 144px;
+  overflow: hidden;
 }
 
 #contact a,
 #contact a:visited {
-  color: #11abb0;
+  color: #fff;
 }
 #contact a:hover,
 #contact a:focus {
-  color: #fff;
+  color: #F5DDA0;
 }
-
-#contact h1 {
-  font: 18px/24px "poppins", sans-serif;
+#contact h2 {
+  font: 22px/30px "poppins", sans-serif;
   font-weight: bold;
-  letter-spacing: 3px;
-  color: #ebeeee;
-  margin-bottom: 6px;
-}
-#contact h1 span {
-  display: none;
-}
-#contact h1:before {
-  font-family: "FontAwesome";
-  content: "\f0e0";
-  padding-right: 10px;
-  font-size: 72px;
-  line-height: 72px;
-  text-align: left;
-  float: left;
-  color: #ebeeee;
-}
-
-#contact h4 {
-  font: 16px/24px "poppins", sans-serif;
-  font-weight: bold;
-  color: #ebeeee;
-  margin-bottom: 6px;
-}
-#contact p.lead {
-  font: 18px/36px "poppins", sans-serif;
-  padding-right: 3%;
-}
-#contact .header-col {
-  padding-top: 6px;
-}
-
-/* contact form */
-#contact form {
-  margin-bottom: 30px;
-}
-#contact label {
-  font: 15px/24px "poppins", sans-serif;
-  font-weight: bold;
-  margin: 12px 0;
-  color: #ebeeee;
-  display: inline-block;
-  float: left;
-  width: 26%;
-}
-#contact input,
-#contact textarea,
-#contact select {
-  padding: 18px 20px;
-  color: #eee;
-  background: #373233;
-  margin-bottom: 42px;
-  border: 0;
-  outline: none;
-  font-size: 15px;
-  line-height: 24px;
-  width: 65%;
-}
-#contact input:focus,
-#contact textarea:focus,
-#contact select:focus {
   color: #fff;
-  background-color: #11abb0;
+  margin-bottom: 12px;
 }
-#contact button.submit {
-  letter-spacing: 3px;
-  color: #fff;
-  background: #0d0d0d;
-  border: none;
-  cursor: pointer;
-  height: auto;
-  display: inline-block;
-  border-radius: 3px;
-  margin-left: 26%;
-}
-#contact button.submit:hover {
-  color: #0d0d0d;
-  background: #fff;
-}
-#contact span.required {
-  color: #11abb0;
-  font-size: 13px;
-}
-#message-warning,
-#message-success {
-  display: none;
-  background: #0f0f0f;
-  padding: 24px 24px;
-  margin-bottom: 36px;
-  width: 65%;
-  margin-left: 26%;
-}
-#message-warning {
-  color: #d72828;
-}
-#message-success {
-  color: #11abb0;
-}
-
-#message-warning i,
-#message-success i {
-  margin-right: 10px;
-}
-#image-loader {
-  display: none;
-  position: relative;
-  left: 18px;
-  top: 17px;
-}
-
-/* Twitter Feed */
-#twitter {
-  margin-top: 12px;
-  padding: 0;
-}
-#twitter li {
-  margin: 6px 0px 12px 0;
+#contact p {
   line-height: 30px;
+  color: #fff;
 }
-#twitter li span {
-  display: block;
+
+/* social links */
+#contact .social {
+  margin: 18px 0 30px 0;
+  padding: 0;
+  font-size: 30px;
 }
-#twitter li b a {
-  font: 13px/36px "poppins", Sans-serif;
-  color: #474747 !important;
-  border: none;
+#contact .social li {
+  display: inline-block;
+  font-size: 30px;
+  margin: 0;
+  padding: 0;
+  margin-left: 42px;
+  color: #fff;
+}
+#contact .social li:first-child {
+  margin-left: 0;
 }
 
 /* ------------------------------------------------------------------ */
@@ -1961,8 +1855,8 @@ call-to-action .button {
 /* ------------------------------------------------------------------ */
 
 footer {
-  padding-top: 48px;
-  padding-bottom: 48px;
+  padding-top: 80px;
+  padding-bottom: 24px;
   background-color: #126AFB;
   color: #fff;
   /*font-size: 14px; */
@@ -2345,64 +2239,6 @@ footer .social li:first-child {
  .popup-modal {	max-width: 85%; }
 
 
- /* Testimonials Section
- ----------------------------------------------------------------------- */
- #testimonials .text-container { text-align: center; }
- #testimonials h1 {
-    font: 16px/24px 'poppins-bold', sans-serif;
-    text-align: center;
-    margin-bottom: 30px;
-    text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
- }
- #testimonials h1 span { display: block; }
- #testimonials .header-col h1:before { content: none; }
- #testimonials blockquote { padding-bottom: 24px; }
- #testimonials blockquote p {
-    font-size: 20px;
-    line-height: 42px;
- }
-
- /* Control Nav */
- .flex-control-nav {
-    text-align: center;
-    margin-left: -30px;
- }
-
-
- /* contact Section
- ----------------------------------------------------------------------- */
- #contact { padding-bottom: 66px; }
- #contact .section-head { margin-bottom: 12px; }
- #contact .section-head h1 {
-    font: 16px/24px 'poppins', sans-serif;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 30px;
-    text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
- }
- #contact h1 span { display: block; }
- #contact .header-col { padding-top: 0; }
- #contact .header-col h1:before { content: none;	}
- #contact .section-head p.lead { text-align: center;}
-
- /* form */
- #contact label {
-    float: none;
-    width: 100%;
- }
- #contact input,
- #contact textarea,
- #contact select {
-     margin-bottom: 6px;
-    width: 100%;
- }
- #contact button.submit { margin: 30px 0 24px 0; }
- #message-warning, #message-success {
-    width: 100%;
-    margin-left: 0;
- }
-
-
  /* footer
  ------------------------------------------------------------------------ */
 
@@ -2422,7 +2258,6 @@ footer .social li:first-child {
     font-size: 18px;
     line-height: 54px;
  }
-
 
 }
 
