--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -828,7 +828,7 @@ properly.
    a. General Styles
    b. Header Styles
    c. About Section
-   d. Resume Section
+   d. Writing Section
    e. Portfolio Section
    f. Call To Action Section
    g. Contact Section
@@ -1146,44 +1146,44 @@ ul#nav li.current a {
 }
 
 /* ------------------------------------------------------------------ */
-/* d. Resume Section
+/* d. Writing Section
 /* ------------------------------------------------------------------ */
 
-#resume {
+#writing {
   background: #4FCB8E;
   padding-top: 90px;
   padding-bottom: 72px;
   overflow: hidden;
 }
 
-#resume a,
-#resume a:visited {
+#writing a,
+#writing a:visited {
   color: #fff;
   text-decoration: none;
 }
-#resume a:hover,
-#resume a:focus {
+#writing a:hover,
+#writing a:focus {
   color: #F5DDA0;
 }
 
-#resume h1 {
+#writing h1 {
   font: 18px/24px "poppins", sans-serif;
   font-weight: bold;
   letter-spacing: 1px;
 }
-#resume h1 span {
+#writing h1 span {
   border-bottom: 3px solid #F5DDA0;
   padding-bottom: 6px;
 }
-#resume h3 {
+#writing h3 {
   font: 20px/25px "poppins", sans-serif;
   font-weight: bold;
 }
 
-#resume .header-col {
+#writing .header-col {
   padding-top: 9px;
 }
-#resume .main-col {
+#writing .main-col {
   padding-right: 10%;
 }
 
@@ -1193,191 +1193,19 @@ ul#nav li.current a {
   padding-bottom: 24px;
   /* border-bottom: 1px solid #e8e8e8; */
 }
-#resume .info {
+#writing .info {
 
   color: #fff;
   margin-bottom: 18px;
   margin-top: 9px;
 }
-#resume .info span {
+#writing .info span {
   margin-right: 5px;
   margin-left: 5px;
 }
-#resume .date {
+#writing .date {
 
   margin-top: 6px;
-}
-
-/*----------------------------------------------*/
-/*	Skill Bars
-/*----------------------------------------------*/
-
-.bars {
-  width: 95%;
-  float: left;
-  padding: 0;
-  text-align: left;
-}
-.bars .skills {
-  margin-top: 36px;
-  list-style: none;
-}
-.bars li {
-  position: relative;
-  margin-bottom: 60px;
-  background: #ccc;
-  height: 42px;
-  border-radius: 3px;
-}
-.bars li em {
-  font: 15px "poppins", sans-serif;
-  color: #fff;
-  letter-spacing: 2px;
-  font-weight: bold;
-  position: relative;
-  top: -36px;
-}
-.bar-expand {
-  position: absolute;
-  left: 0;
-  top: 0;
-
-  margin: 0;
-  padding-right: 24px;
-  background: #313131;
-  display: inline-block;
-  height: 42px;
-  line-height: 42px;
-  border-radius: 3px 0 0 3px;
-}
-
-.photoshop {
-  width: 60%;
-  -moz-animation: photoshop 2s ease;
-  -webkit-animation: photoshop 2s ease;
-}
-.illustrator {
-  width: 55%;
-  -moz-animation: illustrator 2s ease;
-  -webkit-animation: illustrator 2s ease;
-}
-.wordpress {
-  width: 50%;
-  -moz-animation: wordpress 2s ease;
-  -webkit-animation: wordpress 2s ease;
-}
-.css {
-  width: 90%;
-  -moz-animation: css 2s ease;
-  -webkit-animation: css 2s ease;
-}
-.html5 {
-  width: 80%;
-  -moz-animation: html5 2s ease;
-  -webkit-animation: html5 2s ease;
-}
-.jquery {
-  width: 50%;
-  -moz-animation: jquery 2s ease;
-  -webkit-animation: jquery 2s ease;
-}
-
-@-moz-keyframes photoshop {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 60%;
-  }
-}
-@-moz-keyframes illustrator {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 55%;
-  }
-}
-@-moz-keyframes wordpress {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 50%;
-  }
-}
-@-moz-keyframes css {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 90%;
-  }
-}
-@-moz-keyframes html5 {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 80%;
-  }
-}
-@-moz-keyframes jquery {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 50%;
-  }
-}
-
-@-webkit-keyframes photoshop {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 60%;
-  }
-}
-@-webkit-keyframes illustrator {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 55%;
-  }
-}
-@-webkit-keyframes wordpress {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 50%;
-  }
-}
-@-webkit-keyframes css {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 90%;
-  }
-}
-@-webkit-keyframes html5 {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 80%;
-  }
-}
-@-webkit-keyframes jquery {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 50%;
-  }
 }
 
 /* ------------------------------------------------------------------ */
@@ -1779,31 +1607,31 @@ call-to-action .button {
 }
 
 /* ------------------------------------------------------------------ */
-/* h. Now Section
+/* h. Fixations Section
 /* ------------------------------------------------------------------ */
 
-#now {
+#fixations {
   background: #126AFB;
   padding-top: 96px;
   padding-bottom: 66px;
   overflow: hidden;
 }
 
-#now a,
-#now a:visited {
+#fixations a,
+#fixations a:visited {
   color: #fff;
 }
-#now a:hover,
-#now a:focus {
+#fixations a:hover,
+#fixations a:focus {
   color: #F5DDA0;
 }
-#now h2 {
+#fixations h2 {
   font: 22px/30px "poppins", sans-serif;
   font-weight: bold;
   color: #fff;
   margin-bottom: 12px;
 }
-#now p {
+#fixations p {
   line-height: 30px;
   color: #fff;
 }
@@ -1979,10 +1807,10 @@ footer .social li:first-child {
  #guides .contact-details { width: 50%; }
  #guides .download { width: 50%; }
 
- /* Resume Section
+ /* Writing Section
  ------------------------------------------------------------------- */
- #resume h1 { font: 16px/24px  }
- #resume .main-col { padding-right: 5%; }
+ #writing h1 { font: 16px/24px  }
+ #writing .main-col { padding-right: 5%; }
 
   /* Call to Action Section
  ------------------------------------------------------------------- */
@@ -2151,16 +1979,16 @@ footer .social li:first-child {
  #guides .main-col { padding-right: 30px; }
 
 
- /* Resume Section
+ /* Writing Section
  --------------------------------------------------------------------- */
- #resume .header-col {
+ #writing .header-col {
     padding-top: 0;
     margin-bottom: 48px;
     text-align: center;
  }
- #resume h1 { letter-spacing: 3px; }
- #resume .main-col { padding-right: 30px; }
- #resume h3, #resume .info { text-align: center; }
+ #writing h1 { letter-spacing: 3px; }
+ #writing .main-col { padding-right: 30px; }
+ #writing h3, #writing .info { text-align: center; }
 
  .bars { width: 100%; }
 
