--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -139,7 +139,7 @@ html {
 body {
    font-family: 'poppins', sans-serif;
 
-   font-weight: normal;
+   font-weight: 400;
    font-size: 15px;
    line-height: 30px;
 	color: #fff;
@@ -159,12 +159,12 @@ h1 {
 h2 {
   color: #fff;
 	font-family: 'poppins', sans-serif;
-  font-weight: bold;
+  font-weight: 700;
 }
 h3, h4, h5, h6 {
   color: #fff;
 	font-family: 'poppins', sans-serif;
-  font-weight: normal;
+  font-weight: 400;
 }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
 h1 { font-size: 38px; line-height: 42px; margin-bottom: 12px; letter-spacing: -1px; }
