--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -404,6 +404,7 @@ dd { margin: 0 0 0 20px; }
 }
 
 /* Pagination */
+.pagination {
    margin: 36px auto;
    text-align: center;
 }
@@ -419,7 +420,7 @@ dd { margin: 0 0 0 20px; }
    padding: 6px 10px;
    margin-right: 3px;
    margin-bottom: 6px;
-	color: #6E757C;
+color: #6E757C;
 	background-color: #E6E8EB;
 
 	-webkit-transition: all 200ms ease-in-out;
