--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -81,7 +81,7 @@ pre {
    word-wrap: break-word;
 }
 
-blockquote, q { quotes: &#8220 &#8220; }
+blockquote, q { quotes: #8220; }
 
 blockquote:before, blockquote:after,
 q:before, q:after {
@@ -173,7 +173,6 @@ h3 { font-size: 22px; line-height: 30px; margin-bottom: 12px; }
 h4 { font-size: 20px; line-height: 30px; margin-bottom: 6px; }
 h5 { font-size: 18px; line-height: 30px; }
 h6 { font-size: 14px; line-height: 30px; }
-.subheader { }
 
 p { margin: 0 0 30px 0; }
 p img { margin: 0; }
@@ -315,8 +314,6 @@ ol ol, ol ul { margin: 6px 0 6px 30px; }
 ul ul li, ul ol li,
 ol ol li, ol ul li { margin-bottom: 6px; }
 li { line-height: 18px; margin-bottom: 12px; }
-ul.large li { }
-li p { }
 
 /* ---------------------------------------------------------------------
 /*  Stats Tab Markup
@@ -385,24 +382,6 @@ dd { margin: 0 0 0 20px; }
 	margin-left: -0.2em;
 }
 
-/* Dictionary Definition Style Markup */
-.dictionary-style dt {
-	display: inline;
-	counter-reset: definitions;
-}
-.dictionary-style dt + dt:before {
-	content: ", ";
-	margin-left: -0.2em;
-}
-.dictionary-style dd {
-	display: block;
-	counter-increment: definitions;
-}
-.dictionary-style dd:before {
-  .pagination {
-	content: counter(definitions, decimal) ". ";
-}
-
 /* Pagination */
 .pagination {
    margin: 36px auto;
@@ -448,7 +427,6 @@ color: #6E757C;
   background-color: #126AFB;
 	color: #F5DDA0;
 }
-.pagination .prev, .pagination .next {}
 
 /*  5. Images  --------------------------------------------------------- */
 
@@ -544,7 +522,6 @@ select {
    margin: 0 0 24px 0;
    border: 0;
    outline: none;
-   vertical-align: middle;
    min-width: 225px;
 	max-width: 100%;
    font-size: 15px;
