--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,7 +4,6 @@
 *   url: styleshout.com
 *   03-17-2014
 =====================================================================
-
 TOC:
 a. Webfonts and Icon fonts
 b. Reset
@@ -19,7 +18,6 @@ d. Grid
 e. Others
    1. Clearing
    2. Misc
-
 =====================================================================  */
 
 /* ------------------------------------------------------------------ */
@@ -91,13 +89,13 @@ q:before, q:after {
 
 ins {
    background-color: #ff9;
-   color: #1D1D1D;
+   color: #fff;
    text-decoration: none;
 }
 
 mark {
    background-color: #A7F4F6;
-   color: #1D1D1D;
+   color: #fff;
 }
 
 del { text-decoration: line-through; }
@@ -142,7 +140,7 @@ body {
    font-weight: 400;
    font-size: 15px;
    line-height: 30px;
-	color: #1D1D1D;
+	color: #fff;
 
   -webkit-font-smoothing: antialiased;
 }
@@ -152,17 +150,17 @@ body {
 --------------------------------------------------------------------- */
 
 h1 {
-  color: #1D1D1D;
+  color: #fff;
   font-family: 'poppins', sans-serif;
   font-weight: 900;
 }
 h2 {
-  color: #1D1D1D;
+  color: #fff;
 	font-family: 'poppins', sans-serif;
   font-weight: 700;
 }
 h3, h4, h5, h6 {
-  color: #1D1D1D;
+  color: #fff;
 	font-family: 'poppins', sans-serif;
   font-weight: 400;
 }
@@ -282,21 +280,21 @@ abbr:hover { cursor: help; }
 	color: inherit;
 }
 
-hr { border: solid #1D1D1D; border-width: 1px 0 0; clear: both; margin: 11px 0 30px; height: 0; }
+hr { border: solid #fff; border-width: 1px 0 0; clear: both; margin: 11px 0 30px; height: 0; }
 
 
 /*  3. Links  ------------------------------------------------------- */
 
 a, a:visited {
    outline: 0;
-   color: #FA3D56;
+   color: #F5DDA0;
 
    -webkit-transition: color .3s ease-in-out;
    -moz-transition: color .3s ease-in-out;
    -o-transition: color .3s ease-in-out;
    transition: color .3s ease-in-out;
 }
-a:hover, a:focus { color: #FA3D56; }
+a:hover, a:focus { color: #F5DDA0; }
 p a, p a:visited { line-height: inherit; }
 
 
@@ -317,11 +315,9 @@ li { line-height: 18px; margin-bottom: 12px; }
 
 /* ---------------------------------------------------------------------
 /*  Stats Tab Markup
-
     <ul class="stats-tabs">
 		<li><a href="#">[value]<b>[name]</b></a></li>
 	 </ul>
-
     Extend this object into your markup.
 /*
 /* --------------------------------------------------------------------- */
@@ -348,7 +344,7 @@ li { line-height: 18px; margin-bottom: 12px; }
   color: #313131;
 }
 .stats-tabs li a:hover {
-   color:#FA3D56;
+   color:#F5DDA0;
 }
 .stats-tabs li a b {
 	display: block;
@@ -415,17 +411,17 @@ color: #6E757C;
 }
 .pagination .page-numbers:hover {
    background: #838A91;
-   color: #1D1D1D;
+   color: #fff;
 }
 .pagination .current,
 .pagination .current:hover {
-   background-color: #FAFAFA;
-   color: #FA3D56;
+   background-color: #126AFB;
+   color: #F5DDA0;
 }
 .pagination .inactive,
 .pagination .inactive:hover {
-  background-color: #FAFAFA;
-	color: #FA3D56;
+  background-color: #126AFB;
+	color: #F5DDA0;
 }
 
 /*  5. Images  --------------------------------------------------------- */
@@ -447,11 +443,11 @@ input[type="reset"],
 input[type="button"] {
    font: 16px/30px 'poppins', sans-serif;
    font-weight: bold;
-   background: #1D1D1D;
+   background: #4FCB8E;
    display: inline-block;
 	text-decoration: none;
    letter-spacing: 0;
-   color: #1D1D1D;
+   color: #fff;
 	padding: 12px 20px;
 	margin-bottom: 18px;
    border: none;
@@ -476,7 +472,7 @@ input[type="submit"]:hover,
 input[type="reset"]:hover,
 input[type="button"]:hover {
    background: #3d4145;
-   color: #1D1D1D;
+   color: #fff;
 }
 
 .button:active,
@@ -485,7 +481,7 @@ input[type="submit"]:active,
 input[type="reset"]:active,
 input[type="button"]:active {
    background: #3d4145;
-   color: #1D1D1D;
+   color: #fff;
 }
 
 .button.full-width,
@@ -796,7 +792,6 @@ properly.
 *   url: styleshout.com
 *   03-18-2014
 =====================================================================
-
    TOC:
    a. General Styles
    b. Header Styles
@@ -806,7 +801,6 @@ properly.
    f. Call To Action Section
    g. Contact Section
    h. Footer
-
 ===================================================================== */
 
 /* ------------------------------------------------------------------ */
@@ -814,7 +808,7 @@ properly.
 /* ------------------------------------------------------------------ */
 
 body {
-  background: #FAFAFA;
+  background: #126AFB;
 }
 
 /* ------------------------------------------------------------------ */
@@ -826,7 +820,7 @@ header {
   height: 800px;
   min-height: 500px;
   width: 100%;
-  background: #FAFAFA;
+  background: #126AFB;
   background-size: cover !important;
   -webkit-background-size: cover !important;
   text-align: center;
@@ -855,25 +849,25 @@ header .banner-text {
 header .banner-text h1 {
   font: 90px/1.1em "poppins", sans-serif;
   font-weight: 900;
-  color: #1D1D1D;
+  color: #fff;
   letter-spacing: -2px;
   margin: 0 auto 18px auto;
 }
 header .banner-text h3 {
   font: 18px/1.9em "poppins", sans-serif;
   font-weight: bold;
-  color: #1D1D1D;
+  color: #fff;
   margin: 0 auto;
   width: 70%;
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
-  color: #1D1D1D;
+  color: #fff;
 }
 header .banner-text hr {
   width: 60%;
   margin: 18px auto 24px auto;
-  border-color: #1D1D1D;
+  border-color: #fff;
   border-color: rgba(150, 150, 150, 0.1);
 }
 
@@ -890,10 +884,10 @@ header .social li {
   padding: 0;
 }
 header .social li a {
-  color: #1D1D1D;
+  color: #fff;
 }
 header .social li a:hover {
-  color: #FA3D56;
+  color: #F5DDA0;
 }
 
 /* scrolldown link */
@@ -902,13 +896,13 @@ header .scrolldown a {
   bottom: 30px;
   left: 50%;
   margin-left: -29px;
-  color: #1D1D1D;
+  color: #fff;
   display: block;
   height: 42px;
   width: 42px;
   font-size: 42px;
   line-height: 42px;
-  color: #1D1D1D;
+  color: #fff;
   border-radius: 100%;
 
   -webkit-transition: all 0.3s ease-in-out;
@@ -917,7 +911,7 @@ header .scrolldown a {
   transition: all 0.3s ease-in-out;
 }
 header .scrolldown a:hover {
-  color: #FA3D56;
+  color: #F5DDA0;
 }
 
 /* primary navigation
@@ -930,10 +924,10 @@ header .scrolldown a:hover {
   border: none;
   outline: none;
   font-weight: 900;
-  background-color: #FAFAFA;
+  background-color: #126AFB;
 }
 #nav-wrap a:hover {
-  color: #FA3D56;
+  color: #F5DDA0;
 }
 
 /* nav-wrap */
@@ -981,7 +975,7 @@ ul#nav li a {
   line-height: 32px;
   text-decoration: none;
   text-align: left;
-  color: #1D1D1D;
+  color: #fff;
   font-weight: 900;
 
   -webkit-transition: color 0.2s ease-in-out;
@@ -996,7 +990,7 @@ ul#nav li a:active {
   font-weight: 900;
 }
 ul#nav li.current a {
-  color: #FA3D56;
+  color: #F5DDA0;
   font-weight: 900;
 }
 
@@ -1005,7 +999,7 @@ ul#nav li.current a {
 /* ------------------------------------------------------------------ */
 
 #about {
-  background: #1D1D1D;
+  background: #4FCB8E;
   padding-top: 96px;
   padding-bottom: 66px;
   overflow: hidden;
@@ -1013,22 +1007,22 @@ ul#nav li.current a {
 
 #about a,
 #about a:visited {
-  color: #1D1D1D;
+  color: #fff;
 }
 #about a:hover,
 #about a:focus {
-  color: #FA3D56;
+  color: #F5DDA0;
 }
 
 #about h2 {
   font: 22px/30px "poppins", sans-serif;
   font-weight: bold;
-  color: #1D1D1D;
+  color: #fff;
   margin-bottom: 12px;
 }
 #about p {
   line-height: 30px;
-  color: #1D1D1D;
+  color: #fff;
 }
 #about .profile-pic {
   position: relative;
@@ -1051,8 +1045,8 @@ ul#nav li.current a {
   background: #444;
 }
 #about .download .button:hover {
-  background: #1D1D1D;
-  color: #FA3D56;
+  background: #fff;
+  color: #F5DDA0;
 }
 #about .download .button i {
   margin-right: 15px;
@@ -1064,7 +1058,7 @@ ul#nav li.current a {
 /* ------------------------------------------------------------------ */
 
 #product {
-  background: #FAFAFA;
+  background: #126AFB;
   padding-top: 96px;
   padding-bottom: 66px;
   overflow: hidden;
@@ -1072,22 +1066,22 @@ ul#nav li.current a {
 
 #product a,
 #product a:visited {
-  color: #1D1D1D;
+  color: #fff;
 }
 #product a:hover,
 #product a:focus {
-  color: #FA3D56;
+  color: #F5DDA0;
 }
 
 #product h2 {
   font: 22px/30px "poppins", sans-serif;
   font-weight: bold;
-  color: #1D1D1D;
+  color: #fff;
   margin-bottom: 12px;
 }
 #product p {
   line-height: 30px;
-  color: #1D1D1D;
+  color: #fff;
 }
 #product .profile-pic {
   position: relative;
@@ -1110,8 +1104,8 @@ ul#nav li.current a {
   background: #444;
 }
 #product .download .button:hover {
-  background: #1D1D1D;
-  color: #FA3D56;
+  background: #fff;
+  color: #F5DDA0;
 }
 #product .download .button i {
   margin-right: 15px;
@@ -1123,7 +1117,7 @@ ul#nav li.current a {
 /* ------------------------------------------------------------------ */
 
 #writing {
-  background: #1D1D1D;
+  background: #4FCB8E;
   padding-top: 90px;
   padding-bottom: 72px;
   overflow: hidden;
@@ -1131,12 +1125,12 @@ ul#nav li.current a {
 
 #writing a,
 #writing a:visited {
-  color: #1D1D1D;
+  color: #fff;
   text-decoration: none;
 }
 #writing a:hover,
 #writing a:focus {
-  color: #FA3D56;
+  color: #F5DDA0;
 }
 
 #writing h1 {
@@ -1145,7 +1139,7 @@ ul#nav li.current a {
   letter-spacing: 1px;
 }
 #writing h1 span {
-  border-bottom: 3px solid #FA3D56;
+  border-bottom: 3px solid #F5DDA0;
   padding-bottom: 6px;
 }
 #writing h3 {
@@ -1168,7 +1162,7 @@ ul#nav li.current a {
 }
 #writing .info {
 
-  color: #1D1D1D;
+  color: #fff;
   margin-bottom: 18px;
   margin-top: 9px;
 }
@@ -1204,7 +1198,7 @@ ul#nav li.current a {
   margin-bottom: 36px;
 }
 .portfolio-item .item-wrap {
-  background: #1D1D1D;
+  background: #fff;
   overflow: hidden;
   position: relative;
 
@@ -1240,7 +1234,7 @@ ul#nav li.current a {
 }
 .portfolio-item .item-wrap .link-icon {
   display: block;
-  color: #1D1D1D;
+  color: #fff;
   height: 30px;
   width: 30px;
   font-size: 18px;
@@ -1271,7 +1265,7 @@ ul#nav li.current a {
 .portfolio-item .portfolio-item-meta h5 {
   font: 14px/21px "poppins", sans-serif;
   font-weight: bold;
-  color: #1D1D1D;
+  color: #fff;
 }
 .portfolio-item .portfolio-item-meta p {
   font: 12px/18px "poppins", sans-serif;
@@ -1294,7 +1288,7 @@ ul#nav li.current a {
 /* popup modal */
 .popup-modal {
   max-width: 550px;
-  background: #1D1D1D;
+  background: #fff;
   position: relative;
   margin: 0 auto;
 }
@@ -1328,7 +1322,7 @@ ul#nav li.current a {
   text-align: left;
 }
 .popup-modal .link-box a {
-  color: #1D1D1D;
+  color: #fff;
   font: 11px/21px "poppins", sans-serif;
   font-weight: bold;
   letter-spacing: 3px;
@@ -1375,7 +1369,7 @@ ul#nav li.current a {
   font: 18px/24px "poppins", sans-serif;
   font-weight: bold;
   letter-spacing: 3px;
-  color: #1D1D1D;
+  color: #fff;
 }
 #call-to-action h1 span {
   display: none;
@@ -1388,7 +1382,7 @@ ul#nav li.current a {
   line-height: 72px;
   text-align: left;
   float: left;
-  color: #1D1D1D;
+  color: #fff;
 }
 #call-to-action .action {
   margin-top: 12px;
@@ -1408,13 +1402,13 @@ ul#nav li.current a {
 }
 /*#
 call-to-action .button {
-	color:#1D1D1D;
+	color:#fff;
    background: #0D0D0D;
 }
 */
 #call-to-action .button:hover,
 #call-to-action .button:active {
-  background: #1D1D1D;
+  background: #ffffff;
   color: #0d0d0d;
 }
 #call-to-action p span {
@@ -1526,7 +1520,7 @@ call-to-action .button {
   background: rgba(255, 255, 255, 0.7);
 }
 .flex-control-paging li a.flex-active {
-  background: #1D1D1D;
+  background: #fff;
   background: rgba(255, 255, 255, 0.9);
   cursor: default;
 }
@@ -1536,7 +1530,7 @@ call-to-action .button {
 /* ------------------------------------------------------------------ */
 
 #contact {
-  background: #1D1D1D;
+  background: #4FCB8E;
   padding-top: 96px;
   padding-bottom: 66px;
   overflow: hidden;
@@ -1544,21 +1538,21 @@ call-to-action .button {
 
 #contact a,
 #contact a:visited {
-  color: #1D1D1D;
+  color: #fff;
 }
 #contact a:hover,
 #contact a:focus {
-  color: #FA3D56;
+  color: #F5DDA0;
 }
 #contact h2 {
   font: 22px/30px "poppins", sans-serif;
   font-weight: bold;
-  color: #1D1D1D;
+  color: #fff;
   margin-bottom: 12px;
 }
 #contact p {
   line-height: 30px;
-  color: #1D1D1D;
+  color: #fff;
 }
 
 /* social links */
@@ -1573,7 +1567,7 @@ call-to-action .button {
   margin: 0;
   padding: 0;
   margin-left: 42px;
-  color: #1D1D1D;
+  color: #fff;
 }
 #contact .social li:first-child {
   margin-left: 0;
@@ -1584,7 +1578,7 @@ call-to-action .button {
 /* ------------------------------------------------------------------ */
 
 #fixations {
-  background: #FAFAFA;
+  background: #126AFB;
   padding-top: 96px;
   padding-bottom: 66px;
   overflow: hidden;
@@ -1592,21 +1586,21 @@ call-to-action .button {
 
 #fixations a,
 #fixations a:visited {
-  color: #1D1D1D;
+  color: #fff;
 }
 #fixations a:hover,
 #fixations a:focus {
-  color: #FA3D56;
+  color: #F5DDA0;
 }
 #fixations h2 {
   font: 22px/30px "poppins", sans-serif;
   font-weight: bold;
-  color: #1D1D1D;
+  color: #fff;
   margin-bottom: 12px;
 }
 #fixations p {
   line-height: 30px;
-  color: #1D1D1D;
+  color: #fff;
 }
 
 /* ------------------------------------------------------------------ */
@@ -1616,8 +1610,8 @@ call-to-action .button {
 footer {
   padding-top: 80px;
   padding-bottom: 24px;
-  background-color: #FAFAFA;
-  color: #1D1D1D;
+  background-color: #126AFB;
+  color: #fff;
   /*font-size: 14px; */
   font-family: "poppins", sans-serif;
   font-weight: medium;
@@ -1627,11 +1621,11 @@ footer {
 
 footer a,
 footer a:visited {
-  color: #1D1D1D;
+  color: #fff;
 }
 footer a:hover,
 footer a:focus {
-  color: #FA3D56;
+  color: #F5DDA0;
 }
 
 /* copyright */
@@ -1652,7 +1646,7 @@ footer .copyright li:before {
   content: "\2022";
   padding-left: 10px;
   padding-right: 10px;
-  color: #1D1D1D;
+  color: #fff;
 }
 footer .copyright li:first-child:before {
   display: none;
@@ -1670,7 +1664,7 @@ footer .social li {
   margin: 0;
   padding: 0;
   margin-left: 42px;
-  color: #1D1D1D;
+  color: #fff;
 }
 
 footer .social li:first-child {
@@ -1690,7 +1684,7 @@ footer .social li:first-child {
   display: block;
   width: 60px;
   height: 60px;
-  background-color: #FA3D56;
+  background-color: #F5DDA0;
 
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -1698,21 +1692,19 @@ footer .social li:first-child {
   -ms-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 
-  color: #1D1D1D;
+  color: #fff;
   font-size: 21px;
   line-height: 60px;
   border-radius: 100%;
 }
 #go-top a:hover {
-  background-color: #1D1D1D;
+  background-color: #4FCB8E;
 }
 
 /* ==================================================================
-
 *   Ceevee Media Queries
 *   url: styleshout.com
 *   03-18-2014
-
 /* ================================================================== */
 
 
@@ -1824,7 +1816,7 @@ footer .social li:first-child {
   width: 48px;
   height: 48px;
   text-align: left;
-  background-color: #FA3D56;
+  background-color: #F5DDA0;
   position: relative;
     border: none;
     float: right;
@@ -1841,7 +1833,7 @@ footer .social li:first-child {
 #nav-wrap > a:before,
  #nav-wrap > a:after {
   position: absolute;
-  border: 2px solid #1D1D1D;
+  border: 2px solid #fff;
   top: 35%;
   left: 25%;
   right: 25%;
@@ -1872,7 +1864,7 @@ footer .social li:first-child {
 #nav-wrap:target > ul#nav	{
     display: block;
     padding: 30px 20px 48px 20px;
-    background: #FAFAFA;
+    background: #126AFB;
     margin: 0 30px;
     clear: both;
  }
